# text-adventure-handler-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: docker-publish.yml  pypi-publish.yml
src/adventure_handler/: __init__.py  __main__.py  database.py  dice.py  example_usage.py  json_validator.py  models.py  prompt_and_rules.json  randomizer.py  server.py
src/adventure_handler/adventures/: checkout_chaos.json  clockwork_conspiracy.json  cursed_shores.json  fantasy_dungeon.json  noir_detective.json  scifi_station.json  void_claim.json
tests/: test_database.py  test_dice.py  test_input_validation.py  test_manage_character.py  test_memory.py  test_models.py  test_randomizer.py  test_server.py
web/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml
web/backend/: Dockerfile  bun.lockb  package-lock.json  package.json
web/backend/src/: app.ts  db.ts
web/backend/src/tests/: api.test.ts
web/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.css  App.tsx  api.ts  index.css  store.ts  theme.ts  types.ts
web/frontend/src/components/: AnimatedCard.tsx  Confetti.tsx  DiceRoll.tsx  HistoryLog.tsx  InventoryList.tsx  LocationMap.tsx  QuestTracker.tsx  RelationshipGraph.tsx  Skeletons.tsx  StatBar.tsx
web/frontend/src/pages/: Home.tsx  SessionView.tsx
web/frontend/src/utils/: animations.ts
