[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-adventure-handler-mcp"
version = "0.1.7"
description = "MCP server for interactive text adventures with persistent game state, dice-based action resolution, and dynamic content generation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Aaron Anderson"}]

dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0",
    "pydantic-core>=2.0",
    "aiosqlite>=0.19.0",
]

[project.scripts]
text-adventure-handler-mcp = "adventure_handler.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[tool.setuptools]
packages = ["adventure_handler"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
adventure_handler = ["adventures/*.json", "prompt_and_rules.json"]

[tool.ruff]
line-length = 100
target-version = "py310"
